--- a/source/blocks/list-checkbox/list-checkbox.pug
+++ b/source/blocks/list-checkbox/list-checkbox.pug
@@ -1,19 +1,23 @@
 include ../../blocks/input-checkbox/input-checkbox.pug
 
-mixin list-checkbox({listItems=[], listTitle="", expandable=false})
+mixin list-checkbox({ listItems=[], listTitle="", expandable=false })
   -
     const blockName = "list-checkbox";
     const wrapperClass = [blockName];
+    const headerClass = [`${blockName}__header`];
+    const listClass = [`${blockName}__list`];
 
   if (expandable)
     - wrapperClass.push(`js-${blockName}`)
+    - headerClass.push(`js-${blockName}__header`)
+    - listClass.push(`js-${blockName}__list`)
 
   div(class=wrapperClass)
-    div(class=`${blockName}__header`)
+    div(class=headerClass)
       span(class=`${blockName}__title`) #{listTitle}
       if (expandable)
-        i(class=`material-icons ${blockName}__icon`) expand_more
-    ul(class=`${blockName}__list`)
+        i(class=`material-icons ${blockName}__icon js-${blockName}__icon`) expand_more
+    ul(class=listClass)
       each item in listItems
         li(class=`${blockName}__item`)
           +input-checkbox(item)
