--- a/source/styles/_variables.scss
+++ b/source/styles/_variables.scss
@@ -3,12 +3,10 @@ $font-family_h2: 'Quicksand', 'Open Sans', sans-serif;
 $font-family_h3: 'Montserrat', 'Open Sans', sans-serif;
 $font-family_body: 'Montserrat', 'Open Sans', sans-serif;
 
-$font-size_h1: 24px;
-$font-size_h2: 19px;
-$font-size_h3: 12px;
-$font-size_body: 14px;
-
-$line-height_body: 171%;
+$font-size_h1: 2.4rem;
+$font-size_h2: 1.9rem;
+$font-size_h3: 1.2rem;
+$font-size_body: 1.4rem;
 
 $color_back: #FFF;
 $color_main: #1F2041;
