--- a/source/blocks/input-field/input-field.scss
+++ b/source/blocks/input-field/input-field.scss
@@ -4,19 +4,29 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  max-width: 320px;
-  min-width: 150px;
+  max-width: 32rem;
+  min-width: 15rem;
+
+  &__label {
+    display: inline-block;
+    margin-bottom: 0.5rem;
+    color: $color_main;
+    font-family: $font-family_h3;
+    font-weight: bold;
+    font-size: $font-size_h3;
+    text-transform: uppercase;
+  }
 
   &__field {
     width: 100%;
-    height: 44px;
-    padding: 0 1rem;
+    height: 4.4rem;
+    padding: 0 1.5rem;
     background: $color_back;
-    border: 1px solid $color_main-25;
-    border-radius: 4px;
+    border: 0.1rem solid $color_main-25;
+    border-radius: 0.4rem;
+    color: $color_main-75;
     font-family: $font-family_body;
     font-size: $font-size_body;
-    color: $color_main-75;
     outline: none;
 
     &::placeholder {
@@ -28,15 +38,5 @@
     &:hover {
       border-color: $color_main-50;
     }
-  }
-
-  &__label {
-    display: block;
-    margin-bottom: 5px;
-    font-family: $font-family_h3;
-    font-size: $font-size_h3;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: $color_main;
   }
 }
