--- a/source/blocks/list-feature/list-feature.scss
+++ b/source/blocks/list-feature/list-feature.scss
@@ -1,26 +1,23 @@
 .list-feature {
-  max-width: 291px;
-  margin: 0;
-  padding: 0;
-  padding-right: 10px;
+  max-width: 29.1rem;
+  padding-right: 1rem;
   list-style: none;
 
   &__item {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
-    padding-bottom: 17px;
-    border-bottom: 1px solid $color_main-10;
+    margin-bottom: 2rem;
+    padding-bottom: 1.7rem;
+    border-bottom: 0.1rem solid $color_main-10;
   }
 
   &__icon {
-    margin-right: 10px;
-    font-size: 48px;
-    color: $color_prim;
+    margin-right: 1rem;
     background: $color-grad_prim;
-    -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent; // WebKit only
+    color: $color_prim;
+    font-size: 4.8rem;
     user-select: none;
   }
 
@@ -28,10 +25,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    color: $color_main-75;
     font-family: $font-family_body;
     font-size: $font-size_body;
-    line-height: 24px;
-    color: $color_main-75;
+    line-height: 171%;
   }
 
   &__title {
