--- a/source/blocks/pagination/pagination.pug
+++ b/source/blocks/pagination/pagination.pug
@@ -14,7 +14,7 @@ mixin pagination({ itemsNumber=1, itemsPerPage=1, baseHref="", addDescription=""
             i(class=`${blockName}__dots js-${blockName}__dots`) ...
       - }
       span(class=`${blockName}__button-next js-${blockName}__button-next`)
-        +button({btnStyle: "page page_alt", withArrow: true})
+        +button({btnStyle: "as-page as-page_alt", withArrow: true})
     div(class=`${blockName}__description`)
       span(class=`${blockName}__counter js-${blockName}__counter`) 1 &ndash; #{itemsPerPage}
       |  из
