--- a/source/blocks/pagination/pagination.scss
+++ b/source/blocks/pagination/pagination.scss
@@ -5,33 +5,33 @@
   align-items: center;
 
   &__pages {
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
   }
 
   &__page {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 4rem;
+    height: 4rem;
     border-radius: 50%;
+    color: $color_main-50;
     font-family: $font-family_h3;
     font-size: $font-size_h3;
-    color: $color_main-50;
     text-decoration: none;
     user-select: none;
     outline: none;
 
     &:hover {
       background: $color-grad_prim-50;
-      font-weight: bold;
       color: $color_back;
+      font-weight: bold;
     }
 
     &_current {
       background: $color-grad_prim;
-      font-weight: bold;
       color: $color_back;
+      font-weight: bold;
 
       &:hover {
         background: $color-grad_prim;
@@ -43,23 +43,23 @@
     }
   }
 
-  &__button-next {
-    display: inline-block;
-  }
-
   &__dots {
     display: none;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 4rem;
+    height: 4rem;
+    color: $color_main-50;
     font-family: $font-family_h3;
     font-size: $font-size_h3;
-    color: $color_main-50;
     user-select: none;
 
     &_active {
       display: inline-flex;
     }
+  }
+
+  &__button-next {
+    display: inline-block;
   }
 }
