--- a/source/blocks/rating/rating.pug
+++ b/source/blocks/rating/rating.pug
@@ -1,4 +1,4 @@
-mixin rating({value=0})
+mixin rating({ value=0 })
   -
     const blockName = "rating";
     const wrapperClass = [blockName, `js-${blockName}`];
@@ -10,5 +10,5 @@ mixin rating({value=0})
           - icon = "star"
         else
           - icon = "star_border"
-        i(class=`material-icons ${blockName}__icon`) #{icon}
+        i(class=`material-icons ${blockName}__icon js-${blockName}__icon`) #{icon}
     - }
