--- a/source/blocks/subscription/subscription.scss
+++ b/source/blocks/subscription/subscription.scss
@@ -1,10 +1,10 @@
 .subscription {
   position: relative;
-  max-width: 267px;
+  max-width: 26.7rem;
 
   &__button {
     position: absolute;
-    right: 10px;
-    bottom: 10px;
+    right: 1rem;
+    bottom: 1rem;
   }
 }
