--- a/source/styles/global.scss
+++ b/source/styles/global.scss
@@ -9,8 +9,27 @@ body {
   width: 100%;
   height: 100%;
   background: $color_back;
+  color: $color_main;
+  font-size: 62.5%; // 1rem = 10 px
+}
+
+body {
   font-family: $font-family_body;
   font-size: $font-size_body;
-  line-height: 1rem;
-  color: $color_main;
+  line-height: 1;
+}
+
+h1 {
+  font-family: $font-family_h1;
+  font-size: $font-size_h1;
+}
+
+h2 {
+  font-family: $font-family_h2;
+  font-size: $font-size_h2;
+}
+
+h3 {
+  font-family: $font-family_h3;
+  font-size: $font-size_h3;
 }
