Add list-radio block and modify input-radio block

--- a/source/blocks/input-radio/input-radio.pug
+++ b/source/blocks/input-radio/input-radio.pug
@@ -1,9 +1,13 @@
-mixin input-radio({ labelText="" })
+mixin input-radio({ labelText="", addAttributes })
   -
     const blockName = "input-radio";
     const wrapperClass = [blockName];
     attributes.type = "radio";
     attributes.class = `${blockName}__state`;
+
+    for (let attr in addAttributes) {
+      attributes[attr] = addAttributes[attr];
+    }
 
   label(class=wrapperClass)
     input&attributes(attributes)
