--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -22,4 +22,5 @@
 @import '../blocks/list-bullet/list-bullet';
 @import '../blocks/list-feature/list-feature';
 @import '../blocks/list-checkbox/list-checkbox';
+@import '../blocks/list-radio/list-radio';
 @import '../blocks/pagination/pagination';
