Add dropdown-list block

--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -13,6 +13,7 @@ block mixins
   include ../../blocks/list-checkbox/list-checkbox.pug
   include ../../blocks/list-radio/list-radio.pug
   include ../../blocks/pagination/pagination.pug
+  include ../../blocks/dropdown-list/dropdown-list.pug
 
 doctype html
 html(lang="en")
