--- a/source/styles/style.scss
+++ b/source/styles/style.scss
@@ -24,3 +24,4 @@
 @import '../blocks/list-checkbox/list-checkbox';
 @import '../blocks/list-radio/list-radio';
 @import '../blocks/pagination/pagination';
+@import '../blocks/dropdown-list/dropdown-list';
