--- a/source/blocks/list-bullet/list-bullet.pug
+++ b/source/blocks/list-bullet/list-bullet.pug
@@ -1,6 +1,6 @@
 mixin list-bullet({ listItems=[] })
   -
-    const blockName = "list-bullet";
+    const blockName = 'list-bullet';
     const wrapperClass = [blockName];
 
   ul(class=wrapperClass)
