--- a/source/blocks/list-radio/list-radio.pug
+++ b/source/blocks/list-radio/list-radio.pug
@@ -1,8 +1,8 @@
 include ../../blocks/input-radio/input-radio.pug
 
-mixin list-radio({ radioName="default", listItems=[], listTitle })
+mixin list-radio({ radioName='default', listItems=[], listTitle })
   -
-    const blockName = "list-radio";
+    const blockName = 'list-radio';
     const wrapperClass = [blockName];
 
   div(class=wrapperClass)
