--- a/source/pages/ui-kit/form-elements.pug
+++ b/source/pages/ui-kit/form-elements.pug
@@ -92,7 +92,20 @@ block content
           ]
         })
 
-    .form-elements__column
+      .form-elements__item
+        +dropdown-list({
+          labelText: "Dropdown",
+          inpPlaceholder: "Какие удобства",
+          inpName: "features",
+          listItems: [
+            {title: "спальни", names: ["спальня", "спальни", "спален"], value: 2, minValue: 0, maxValue: 3},
+            {title: "кровати", names: ["кровать", "кровати", "кроватей"], value: 2, minValue: 0, maxValue: 6},
+            {title: "ванные комнаты", names: ["ванная комната", "ванные комнаты", "ванных комнат"], value: 0, minValue: 0, maxValue: 2}
+          ],
+          active: true
+        })
+
+    .form-elements__column.form-elements__column_shifted
       .form-elements__item
         +dropdown-list({
           withButtons: true,
@@ -103,7 +116,8 @@ block content
             {combined: true, title: "взрослые", names: ["гость", "гостя", "гостей"], value: 0, minValue: 0, maxValue: 10},
             {combined: true, title: "дети", names: ["гость", "гостя", "гостей"], value: 0, minValue: 0, maxValue: 10},
             {title: "младенцы", names: ["младенец", "младенца", "младенцев"], value: 0, minValue: 0, maxValue: 10}
-          ]
+          ],
+          active: true
         })
 
     .form-elements__column
@@ -117,7 +131,8 @@ block content
             {combined: true, title: "взрослые", names: ["гость", "гостя", "гостей"], value: 2, minValue: 0, maxValue: 10},
             {combined: true, title: "дети", names: ["гость", "гостя", "гостей"], value: 1, minValue: 0, maxValue: 10},
             {title: "младенцы", names: ["младенец", "младенца", "младенцев"], value: 0, minValue: 0, maxValue: 10}
-          ]
+          ],
+          active: true
         })
 
     .form-elements__column
@@ -138,7 +153,25 @@ block content
             ]
           })
 
-    .form-elements__column
+      .form-elements__item
+        .form-elements__checkbox-list.form-elements__checkbox-list_wide
+          +list-checkbox({
+            expandable: true,
+            listTitle: "Expandable Checkbox List",
+            listItems: [
+              {labelText: "Завтрак"},
+              {labelText: "Письменный стол", addAttributes: {checked: true}},
+              {labelText: "Стул для кормления", addAttributes: {checked: true}},
+              {labelText: "Кроватка", addAttributes: {checked: true}},
+              {labelText: "Телевизор"},
+              {labelText: "Шампунь"},
+              {labelText: "Телевизор"},
+              {labelText: "Шампунь"}
+            ],
+            active: true
+          })
+
+    .form-elements__column.form-elements__column_shifted
       .form-elements__item
         .form-elements__checkbox-list.form-elements__checkbox-list_wide
           +list-checkbox({
@@ -177,7 +210,7 @@ block content
           ]
         })
 
-    .form-elements__column.form-elements__column_wide
+    .form-elements__column.form-elements__column_shifted.form-elements__column_wide
       .form-elements__item
         +comment({
           userName: "Мурад сарафанов",
