--- a/source/blocks/button-like/button-like.pug
+++ b/source/blocks/button-like/button-like.pug
@@ -1,14 +1,18 @@
 mixin button-like({ likeCount=0, active=false })
   -
-    const blockName = "button-like";
-    let icon = "favorite_border";
-    attributes.type = "button";
+    const blockName = 'button-like';
+    attributes.type = 'button';
+    attributes.title = likeCount;
+    attributes['data-active'] = active;
     attributes.class = [blockName, `js-${blockName}`];
+    const iconClass = ['material-icons', `${blockName}__icon`, `js-${blockName}__icon`]
+    let icon = 'favorite_border';
+    const counterClass = [`${blockName}__counter`, `js-${blockName}__counter`];
 
   if (active)
     - attributes.class.push(`${blockName}_active`)
-    - icon = "favorite"
+    - icon = 'favorite'
 
   button&attributes(attributes)
-    i(class=`material-icons ${blockName}__icon js-${blockName}__icon`) #{icon}
-    span(class=`${blockName}__counter js-${blockName}__counter`) #{likeCount}
+    i(class=iconClass) #{icon}
+    span(class=counterClass) #{likeCount}
