--- a/source/blocks/list-checkbox/list-checkbox.scss
+++ b/source/blocks/list-checkbox/list-checkbox.scss
@@ -5,7 +5,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 1.6rem;
   }
 
   &__header:hover &__icon {
@@ -23,22 +22,28 @@
 
   &__icon {
     display: inline-block;
+    margin-right: 0.5rem;
     color: $color_main-50;
     transition: transform 0.3s ease-in-out;
 
-    &_rotated {
+    &_active {
       transform: rotate(-180deg);
     }
   }
 
   &__list {
     list-style: none;
+    padding-top: 1.6rem;
+    transform-origin: 0 0;
     transition: all 0.3s ease-in-out;
 
     &_inactive {
+      position: absolute;
+      padding-top: 0;
       visibility: hidden;
-      height: 0;
       opacity: 0;
+      transform: scaleY(0);
+      transform-origin: 0 0;
     }
   }
 
