--- a/source/blocks/pagination/pagination.pug
+++ b/source/blocks/pagination/pagination.pug
@@ -1,22 +1,30 @@
 include ../../blocks/button/button.pug
 
-mixin pagination({ itemsNumber=1, itemsPerPage=1, baseHref="", addDescription="" })
+mixin pagination({ itemsNumber=1, itemsPerPage=1, baseHref='', addDescription='' })
   -
-    const blockName = "pagination";
+    const blockName = 'pagination';
     const wrapperClass = [blockName, `js-${blockName}`];
+    const pageBtnClass = [`${blockName}__page`, `js-${blockName}__page`];
+    const dotsClass = [`${blockName}__dots`, `js-${blockName}__dots`];
+    const nextBtnClass = [`${blockName}__button-next`, `js-${blockName}__button-next`];
+    const counterClass = [`${blockName}__counter`, `js-${blockName}__counter`];
     const pagesNumber = Math.ceil(itemsNumber / itemsPerPage);
 
-  div(class=wrapperClass data-items-number=itemsNumber data-items-per-page=itemsPerPage)
+  div(
+    class=wrapperClass,
+    data-items-number=itemsNumber,
+    data-items-per-page=itemsPerPage
+  )
     div(class=`${blockName}__pages`)
       - for (let i = 1; i <= pagesNumber; i++) {
-          a(class=`${blockName}__page js-${blockName}__page` href=`${baseHref}/page-${i}`) #{i}
+          a(class=pageBtnClass, href=`${baseHref}/page-${i}`) #{i}
           if (i === 1 || i === pagesNumber - 1)
-            i(class=`${blockName}__dots js-${blockName}__dots`) ...
+            i(class=dotsClass) ...
       - }
-      span(class=`${blockName}__button-next js-${blockName}__button-next`)
-        +button({btnStyle: "as-page as-page_alt", withArrow: true})
+      span(class=nextBtnClass)
+        +button({ btnStyle: 'as-page as-page_alt', withArrow: true })
     div(class=`${blockName}__description`)
-      span(class=`${blockName}__counter js-${blockName}__counter`) 1 &ndash; #{itemsPerPage}
+      span(class=counterClass) 1 &ndash; #{itemsPerPage}
       |  из
       if (itemsNumber > 100)
         |  100+
