--- a/source/blocks/pagination/pagination.scss
+++ b/source/blocks/pagination/pagination.scss
@@ -22,6 +22,10 @@
     user-select: none;
     outline: none;
 
+    &:focus {
+      box-shadow: 0 0 0.5rem $color_prim;
+    }
+
     &:hover {
       background: $color-grad_prim-50;
       color: $color_back;
@@ -38,7 +42,7 @@
       }
     }
 
-    &_hidden {
+    &_inactive {
       display: none;
     }
   }
@@ -52,6 +56,7 @@
     color: $color_main-50;
     font-family: $font-family_h3;
     font-size: $font-size_h3;
+    font-style: normal;
     user-select: none;
 
     &_active {
