--- a/source/blocks/rating/rating.pug
+++ b/source/blocks/rating/rating.pug
@@ -1,14 +1,15 @@
 mixin rating({ value=0 })
   -
-    const blockName = "rating";
+    const blockName = 'rating';
     const wrapperClass = [blockName, `js-${blockName}`];
-    let icon = "star_border";
+    const iconClass = ['material-icons', `${blockName}__icon`, `js-${blockName}__icon`];
+    let icon = 'star_border';
 
-  span(class=wrapperClass title=`${value}`)
+  span(class=wrapperClass, title=`${value}`)
     - for (let i = 0, j = value; i < 5; i++, j--) {
         if (j > 0)
-          - icon = "star"
+          - icon = 'star'
         else
-          - icon = "star_border"
-        i(class=`material-icons ${blockName}__icon js-${blockName}__icon`) #{icon}
+          - icon = 'star_border'
+        i(class=iconClass) #{icon}
     - }
